--- a/.github/workflows/dast-zap.yml
+++ b/.github/workflows/dast-zap.yml
@@ -12,12 +12,13 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.7.0
+        uses: zaproxy/action-baseline@v0.10.0  # Última versión
         with:
-          target: 'https://example.com'  # Temporal
+          docker_name: ghcr.io/zaproxy/zap-stable  # Nueva imagen oficial
+          target: 'https://example.com'
 
       - name: Upload ZAP Report
         uses: actions/upload-artifact@v4
