--- a/.github/workflows/dast-zap.yml
+++ b/.github/workflows/dast-zap.yml
@@ -1,9 +1,9 @@
 name: DAST OWASP ZAP
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
+    branches: [ "master" ]
+  push:
     branches: [ "master" ]
 
 jobs:
@@ -11,17 +11,43 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Paso 1: Clonar el repositorio
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # Paso 2: Ejecutar OWASP ZAP (usando imagen pública de Docker Hub)
       - name: Run OWASP ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.10.0  # Última versión
+        id: zap_scan
+        uses: zaproxy/action-baseline@v0.10.0
         with:
-          docker_name: ghcr.io/zaproxy/zap-stable  # Nueva imagen oficial
-          target: 'https://example.com'
+          docker_name: owasp/zap2docker-weekly
+          target: 'https://example.com'   # Cambia por la URL de tu app
+          cmd_options: '-a -t 5'
 
-      - name: Upload ZAP Report
+      # Paso 3: Subir reportes como artefactos
+      - name: Upload ZAP HTML Report
         uses: actions/upload-artifact@v4
         with:
-          name: ZAP-Report
+          name: ZAP-HTML-Report
           path: report_html.html
+
+      - name: Upload ZAP JSON Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: ZAP-JSON-Report
+          path: report_json.json
+
+      # Paso 4: Publicar resumen en el Pull Request
+      - name: Publicar resultados en PR
+        if: github.event_name == 'pull_request'
+        uses: marocchino/sticky-pull-request-comment@v2
+        with:
+          header: zap-scan
+          message: |
+            ## 🔍 OWASP ZAP Scan Report
+            **URL Escaneada:** https://example.com
+            **Resultado:** El escaneo se completó.  
+            [Descargar Reporte HTML](${{ steps.zap_scan.outputs.html-report-url }})
+            [Descargar Reporte JSON](${{ steps.zap_scan.outputs.json-report-url }})
+
+            > Revisa los artefactos del workflow para detalles completos.
